<resources>
    <string name="app_name">UIApplication</string>
    <string name="welcome">Welcome to my app</string>
    <string name="click_me">Click Me!</string>
    <string name="introduction_tictactoe">
        TicTacToe is a pencil-and-paper game
        for two players, X and O, who take
        turns marking the spaces in a 3x3 grid.
        The X player usually goes first. The
        player who succeeds in placing three
        respective marks in a horizontal,
        vertical, or diagonal row wins the game.
    </string>
    <string name="menu_about">About</string>
    <string name="menu_calculator">Calculator</string>
    <string name="text_view_north">North</string>
    <string name="text_view_west">West</string>
    <string name="text_view_center">Center</string>
    <string name="text_view_east">East</string>
    <string name="text_view_south">South</string>
</resources>
